2000-06-28  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* ruby-ext/lib/mhc-kconv.rb: New file.

	* ruby-ext/lib/mhc-date.rb: Convert coding system with MhcKconv.

	* ruby-ext/lib/mhc-gtk.rb: Ditto.

	* today: Ditto.

	* palm2mhc: Ditto.

	* mhc2palm: Ditto.

	* mhc-sync: Ditto.

	* gemcal: Ditto.
	
2000-06-28  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup):
	Set `wl-summary-buffer-next-folder-func' and
	`wl-summary-buffer-prev-folder-func'.

2000-06-28  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-summary.el (mhc-summary-insert-contents): If mailer eq 'direct,
	disable icon and insert \n.
	(mhc-summary-line-insert): Set background color, if today.

	* emacs/mhc-calendar.el (mhc-calendar-insert-summary-contents): Follow up new method.

	* emacs/mhc-ps.el (mhc-ps/substring): Use mhc-string-to-char-list
	instead of string-to-list.

2000-06-28  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): `set-buffer-modified-p' as nil.

	* emacs/mhc-compat.el (mhc-string-to-char-list): New function.

	* emacs/mhc-summary.el (mhc-summary-line-format): Fixed docstring.
	(mhc-summary-todo-line-format): Ditto.
	(mhc-summary-line-format-alist): Ditto.
	(mhc-summary-todo-line-format-alist): Ditto.
	(mhc-summary/line-inserter-setup-internal): New function.
	(mhc-summary-todo-line-inserter-setup): Eliminated.
	(mhc-summary/line-parse-format): Use `mhc-string-to-char-list'.

	* emacs/mhc.el (mhc-setup):
	Delete `mhc-summary-todo-line-inserter-setup'.

2000-06-27  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-current-date): New implementation.

	* emacs/mhc-summary.el (mhc-summary/line-parse-format):
	Treat characters after '%' as spec, insert as-is otherwise.
	(mhc-summary-line-format): Likewise.
	(mhc-summary-todo-line-format): Likewise.
	(mhc-summary-icon-position): Eliminated.

	* emacs/mhc-mew.el (mhc-mew-insert-summary-contents): Fixed.
